--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -6,8 +6,16 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 8px;
+    padding-right: 8px;
     box-sizing: border-box;
   }
+
+@media (min-width: 640px) {
+  .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 
