--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
-.container {
+.my-container {
     max-width: 1150px;
     margin-left: auto;
     margin-right: auto;
